tests/boxmodels/breakpoints.scss
@use "salt";

////////////////////////////////////////////////////////////////////////////////
//
//   Breakpoints
//
////////////////////////////////////////////////////////////////////////////////

.breakpoint{
  // content: salt.breakpoint('m');
  // error: salt.breakpoint('foo');
  //
  // @include salt.media("m"){
  //   color: 'm';
  // }
}
